GNU bug report logs - #16961
left-char moves to beginning of line; visual-order-cursor-movement

Previous Next

Package: emacs;

Reported by: David Reitter <david.reitter <at> gmail.com>

Date: Fri, 7 Mar 2014 15:54:02 UTC

Severity: normal

Done: Eli Zaretskii <eliz <at> gnu.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 16961 in the body.
You can then email your comments to 16961 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to markoilcan <at> gmail.com, bug-gnu-emacs <at> gnu.org:
bug#16961; Package emacs. (Fri, 07 Mar 2014 15:54:03 GMT) Full text and rfc822 format available.

Acknowledgement sent to David Reitter <david.reitter <at> gmail.com>:
New bug report received and forwarded. Copy sent to markoilcan <at> gmail.com, bug-gnu-emacs <at> gnu.org. (Fri, 07 Mar 2014 15:54:04 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: David Reitter <david.reitter <at> gmail.com>
To: Bug-Gnu-Emacs <bug-gnu-emacs <at> gnu.org>
Subject: left-char moves to beginning of line; visual-order-cursor-movement
Date: Fri, 7 Mar 2014 10:52:38 -0500
[Message part 1 (text/plain, inline)]
X-Debbugs-cc: markoilcan <at> gmail.com

To reproduce this bug:

Start Emacs -Q (testing with mainline build dated Jan 29):

Paste the following:

——snip
(global-hl-line-mode)
(setq visual-order-cursor-movement t)
(visual-line-mode)

 asdasd
——snap

Note that “ asdasd” has a space at the beginning, and it needs to be the last line of the buffer.
Evaluate the first three expressions, place the text cursor at the end of the buffer (that is, after “asd”).

The line should be highlighted.  Now press `left’ (or do M-x left-char).

Point will jump to the beginning of the line.
Expected behavior is that it would move by just one char.



Begin forwarded message:

> From: M A <markoilcan <at> gmail.com>
> Subject: cursor movement error
> Date: March 6, 2014 at 5:55:29 PM EST
> To: aquamacs-bugs <at> aquamacs.org
> 
> When pressing the left arrow key when global-hl-line-mode is enabled and the cursor is at the very end of the buffer (no characters following it, including \n) and there is a space earlier in the line, instead of moving left a single characacter, the cursor moves a whole word.
> 
> 
> To replicate this:
> 1. Start aquamacs without customizations.
> 2. M-x global-hl-line-mode.
> 3. Type " testing" (note space before the word "testing").
> 4. Press left arrow key once.
> At this point the cursor is to the left of the space character before the word "testing" instead of before the letter "g".
> 
> In Aquamacs 3.0a GNU Emacs 24.3.50.2
> (x86_64-apple-darwin13.0.0, NS apple-appkit-1265.00)
>  of 2014-01-20 (Aquamacs-3.0a) on watson
> Git revision: Aquamacs-3.0a
> Operating System: OS X Version 10.7.5 (Build 11G63b)
> Configured using:
>  `configure --with-ns --without-x 'CFLAGS=-arch x86_64 -O3 -g
>  -mtune=corei7 -mmacosx-version-min=10.6' 'LDFLAGS=-arch x86_64 -O3 -g
>  -mtune=corei7 -mmacosx-version-min=10.6''
> 
> Important settings:
>   value of $LANG: en_US.UTF-8
>   locale-coding-system: utf-8-unix
>   default enable-multibyte-characters: t
> 
> 

[Message part 2 (text/html, inline)]

Reply sent to Eli Zaretskii <eliz <at> gnu.org>:
You have taken responsibility. (Fri, 07 Mar 2014 20:04:02 GMT) Full text and rfc822 format available.

Notification sent to David Reitter <david.reitter <at> gmail.com>:
bug acknowledged by developer. (Fri, 07 Mar 2014 20:04:02 GMT) Full text and rfc822 format available.

Message #10 received at 16961-done <at> debbugs.gnu.org (full text, mbox):

From: Eli Zaretskii <eliz <at> gnu.org>
To: David Reitter <david.reitter <at> gmail.com>
Cc: 16961-done <at> debbugs.gnu.org, markoilcan <at> gmail.com
Subject: Re: bug#16961: left-char moves to beginning of line;
 visual-order-cursor-movement
Date: Fri, 07 Mar 2014 22:03:53 +0200
> From: David Reitter <david.reitter <at> gmail.com>
> Date: Fri, 7 Mar 2014 10:52:38 -0500
> Cc: markoilcan <at> gmail.com
> 
> Start Emacs -Q (testing with mainline build dated Jan 29):
> 
> Paste the following:
> 
> ——snip
> (global-hl-line-mode)
> (setq visual-order-cursor-movement t)
> (visual-line-mode)
> 
>  asdasd
> ——snap
> 
> Note that “ asdasd” has a space at the beginning, and it needs to be the last line of the buffer.
> Evaluate the first three expressions, place the text cursor at the end of the buffer (that is, after “asd”).
> 
> The line should be highlighted.  Now press `left’ (or do M-x left-char).
> 
> Point will jump to the beginning of the line.
> Expected behavior is that it would move by just one char.

HL Line Mode, the Mother Of All Evil...

Fixed in trunk revision 116701.

> > 1. Start aquamacs without customizations.
> > 2. M-x global-hl-line-mode.
> > 3. Type " testing" (note space before the word "testing").
> > 4. Press left arrow key once.
> > At this point the cursor is to the left of the space character before the word "testing" instead of before the letter "g".

Does this mean "Aquamacs without customizations" has
visual-order-cursor-movement set to t?  If so, I think it's not a good
idea at all: that variable is user-level customization, it shouldn't
be forced on the users.




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sat, 05 Apr 2014 11:24:04 GMT) Full text and rfc822 format available.

This bug report was last modified 10 years and 33 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.